# rust-setup-local-qwasar

./: Cargo.toml  README.md
src/: lib.rs  main.rs  qwasar.rs  write.rs
